editoast : add get voltages by infra endpoint
